# DeTaGrandMere

./: .gitignore  LICENSE  README.md  antenna_simulation_implementation_plan.md  checklist.md  granular_implementation_plan.md  gui_launcher.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  run.py  work-ongoing.md
.github/workflows/: ci.yml
USE_CASES/: UC-01-Initialize-Project-Environment.md  UC-02-Study-MoM-Theory-and-Design-Architecture.md  UC-03-Implement-OpenCASCADE-CAD-Integration.md  UC-04-Implement-CGAL-Mesh-Generation.md  UC-05-Implement-Boundary-Conditions-and-Materials.md  UC-06-Implement-Linear-Algebra-and-Solvers.md  UC-07-Implement-MoM-Formulation-EFIE-MFIE-CFIE.md  UC-08-Implement-RWG-Basis-Functions.md  UC-09-Implement-Full-MoM-Solver.md  UC-10-Verify-with-Simple-Antennas.md  UC-11-Implement-Field-Visualization.md  UC-12-Calculate-Antenna-Metrics.md  UC-13-Implement-Data-Export-and-Import.md  UC-14-Implement-GPU-Acceleration.md  UC-15-Implement-Fast-Multipole-Method.md  UC-16-Implement-Advanced-Materials.md  UC-17-Create-Comprehensive-Test-Suite.md  UC-18-Create-Documentation.md  UC01.md  UC02.md  UC03.md  UC04.md  UC05.md  UC06.md  UC07.md  UC08.md  UC09.md  UC10.md  UC11.md  UC12.md  UC13.md  UC14.md  UC15.md  UC16.md  UC17.md  UC18.md  UC19.md  UC20.md  UC21.md  UC22.md  (+1 more)
configs/: antenna.yaml
docs/source/: api.rst  conf.py  index.rst  tutorials.rst
src/: __init__.py
src/cad/: advanced_materials.py  boundary_conditions.py  cgal_meshing.py  errors.py  material_database.py  opencascade_wrapper.py  (+1 more)
use_cases/: README.md
(+69 files in other folders)
